played around with the layout, things seem to be centered need to fix the stretched background image when the page is at fullscreen

--- a/app/style.css
+++ b/app/style.css
@@ -2,23 +2,21 @@
   box-sizing: border-box;
 }
 
-html{
-  width:100%;
-}
 
 html,body {
   height: 100%;
-
+  width: 100%;
 }
 
 nav {
   background-color: black;
   height: 40%;
-  width: 100%;
+  width: 90%;
   color:white;
   font-family: 'Coming Soon', cursive;
   font-size: 2em;
   padding-left: 2%;
+  margin-left: 5%;
 }
 
 
@@ -29,6 +27,7 @@ body {
   padding: 2%;
 }
 
+
 a {
   display: block;
   text-decoration: none;
@@ -36,21 +35,22 @@ a {
 }
 
 .background {
-  margin-top:-10px;
-  width: 100%;
+  margin-top: 2%;
+  width: 90%;
   height: 300px;
 }
 
 .preview {
   border: 1px solid black;
-  border-radius: 2px;
+  border-radius: 3px;
 }
 
 footer {
+  margin-left: 5%;
   margin-top: 40%;
   background-color: black;
   height: 20%;
-  width: 100%;
+  width: 90%;
   color:white;
   font-family: 'Coming Soon', cursive;
   font-size: 0.3em;
